Fixing desktop > nav link visual issue – caused by nav collapse for mobile

--- a/src/assets/scss/components/_MainNav.scss
+++ b/src/assets/scss/components/_MainNav.scss
@@ -60,10 +60,21 @@
   }
 }
 
-// remove hamburger button outline
+// Remove hamburger button outline
 .navbar-toggler:focus,
 .navbar-toggler:active,
 .navbar-toggler-icon:focus {
   outline: none;
   box-shadow: none;
 }
+
+/* Main Nav > overwrite bootstrap behaviour on desktop
+Added data attributes to links to close nav on mobile when clicked
+Collapsing causing issue on desktop
+Opted for this over React hooks and event listeners, cleaner */
+@include media-breakpoint-up(lg) {
+  .navbar-collapse.collapsing {
+    height: auto !important; /* Could not avoid using !important here */
+  }
+}
+
